# ChangeLog for app-admin/ec2-ami-tools
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/ec2-ami-tools/ChangeLog,v 1.15 2013/09/04 12:56:00 tomwij Exp $

*ec2-ami-tools-1.4.0.5-r2 (04 Sep 2013)

  04 Sep 2013; Tom Wijsman <TomWij@gentoo.org> +ec2-ami-tools-1.4.0.5-r2.ebuild,
  -ec2-ami-tools-1.4.0.2.ebuild, -ec2-ami-tools-1.4.0.5-r1.ebuild:
  Revison bump. Depend on Ruby 1.9.

  02 Apr 2013; Tom Wijsman <TomWij@gentoo.org> -ec2-ami-tools-1.4.0.5.ebuild,
  ec2-ami-tools-1.4.0.5-r1.ebuild:
  Removal of left behind license file, listed those licenses in the LICENSE
  variable. Clarified die calls.

*ec2-ami-tools-1.4.0.5-r1 (02 Apr 2013)

  02 Apr 2013; Tom Wijsman <TomWij@gentoo.org> +ec2-ami-tools-1.4.0.5-r1.ebuild,
  metadata.xml:
  Taking maintainership. Extensively tested. Removed unnecessary removal of
  *.cmd files which does not affect installation. Clarified reasoning why there
  is an explicit Ruby 1.8 dependency. Revision bump as we now install to /
  instead of /opt, dropped ROOT and ROOTPATH environment variables since the
  binaries are already accessible through their defaults.

*ec2-ami-tools-1.4.0.5 (13 Mar 2013)

  13 Mar 2013; Tom Wijsman <TomWij@gentoo.org> +ec2-ami-tools-1.4.0.5.ebuild:
  Non-maintainer commit, version bump to 1.4.0.5.

  22 Jul 2012; Pacho Ramos <pacho@gentoo.org> -ec2-ami-tools-1.3.34544.ebuild,
  -ec2-ami-tools-1.3.57676-r1.ebuild:
  Drop old, even stable as requested in bug #339813

  08 Jul 2012; Diego E. Pettenò <flameeyes@gentoo.org> metadata.xml:
  Re-assign to maintainer-needed.

*ec2-ami-tools-1.4.0.2 (14 Dec 2011)

  14 Dec 2011; Fabio Erculiani <lxnay@gentoo.org>
  +ec2-ami-tools-1.4.0.2.ebuild:
  version bump

  18 Nov 2010; Diego E. Pettenò <flameeyes@gentoo.org>
  ec2-ami-tools-1.3.57676-r1.ebuild:
  Add EC2 tools' directory to root's path as well.

*ec2-ami-tools-1.3.57676-r1 (16 Nov 2010)

  16 Nov 2010; Diego E. Pettenò <flameeyes@gentoo.org>