@@ -2,17 +2,17 @@
 Hash: SHA256
 
 DIST ec2-ami-tools-1.4.0.5.zip 139373 SHA256 e5a8f49826c85c9df2421e36d618fb9bc1951bb0eeb45680c4379a0362c50d6e SHA512 e9754b26b61e168760002ac3c15d83c8d9f702e478c2295df42ae9e08e7d1788c73b60f7292867d8df553225a82e70ac335419dbcc226e3f0e251f1950a66621 WHIRLPOOL c71b102824595ceeeee693ad5cfca5dd7120510b2f4165fd7010f9cf9de3d4bcb5242166ee58b8295f4ff7f2a1dccaa834bb277ccf325928ede9307bd18da980
-EBUILD ec2-ami-tools-1.4.0.5-r2.ebuild 1612 SHA256 0da7dbc5295a8a68a9da2abfc608b4f888fd6f964b8130b3e33005c05f2ac8ea SHA512 fa57845d6e1572931c4cdde42bab4561dc42782d913168efed73a87618c3dce14812faa527ac0072055de6ef45ecef5fcff742bf9105024f136b4c21cb360a2e WHIRLPOOL b6d0e2a5166da6cdcf6d9c0951c8cec2f32d6a9e97b951fb4742656d2eadf40321087bddf343836f5e09e3b52bb53597fa11406c289ac2a63a566cf33666de9c
-MISC ChangeLog 3440 SHA256 f41b0d20f15b0a1f5bc35b9e271284c10eca98269bb9edc1c3963e8ff01f43b3 SHA512 25b22e06631738149cd602d25ad6b47047a6185bb7bc69cce4d58fa818b25ee8dcb47f7929bddb09dee721e976f12b627f611e30d388d8605a8f48375045429d WHIRLPOOL 3c7ef47801ffc0293378811b185769d8edfc7b8a52253a98c7bb847fe819521d21f634d1fb61dce4f9b05248373e99bf1f8806902e488f7d2babe9090a1a3231
+EBUILD ec2-ami-tools-1.4.0.5-r3.ebuild 1502 SHA256 b15041cd965a83a702135d4d9389562cf5bba4fc6eb7f8b81334380c9be3ddae SHA512 c7e4a2a9c91c740043b2efdcf9f6e89ebb1af486b46a4b2d0db45596796c98eda9605e842f480fe29ef23d9893320a2c5deb19d1ea5832114faa05a0afe55581 WHIRLPOOL b30350c6a7dae4306c22dc4fc303765e7bbf02acce8fa6ff9f9839ed958d20afa436003d1ff0d5792278ec6919c405b8eb1240e16fba13c5dd6dad528cd3a65d
+MISC ChangeLog 3751 SHA256 31d31074349d7632e12d9c6766c0382a19426f349954b72de40237834a0b9d43 SHA512 4e06dde404d3e89391f072d0d40bec0973763e68239150707431a2a9eb2fd276f6b810104d076620353621a454e228f9b1cf59b6cb11eb91f388f79426286f74 WHIRLPOOL a3e40b2bbe34c628c464ad30bc6ac25b4a42bb80ffe028f44e9b732e8ae477fbfbd4dd852eccf634004d86fd8ba6b8d59719af9aecb0dd7a46d17e3a1fdbfd2f
 MISC metadata.xml 367 SHA256 6c3c034259db62d0e77d638aaf71cc9e622717cb4c662fc0ea8bc0d79857a435 SHA512 978a135f407c84d4326b240600d59adc55ed686f3d3243f86a9c34712674441d2363bd24c8bba2d86b789e721d6c49a16fac363a8a455998c706e48875b3e87e WHIRLPOOL 6f9877b587255891889577a673fdad7cd539df9be6ae20a780178b5fb765b68f0e977e0bdbc313248a9ea11af1934501e203932bbcf4018d23023cc0f804d1b2
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.21 (GNU/Linux)
 
-iQEcBAEBCAAGBQJSJy3pAAoJEJWyH81tNOV97AMH/3pg4AVH06Ixrsj4RzL3Pe8E
-k4K3VpojjY7sn5ZR4qg5iObRhjeZwbbBg/fYGHnIUPHrpZSKYz8yu9XGIBciydw/
-PBNYgLh4dzAOpkW1oV/nAkxPeRtOhbDFTR4sEJ1K3/Hm6n0QBMQlX2qQJ3jiQCNg
-mBEth/pvh2PUDh6IkE6RNjZFk9rW3zLlk+6X3UEn96esvNzzlUmwA/rmyDVJrYcM
-8ipSbmzaq0kzwHbo18gnzNRWwNbNObNd3xmq4k2CoeLC0X9FVU5mtGNKusdHDkme
-V2+rIskn10BbtLx+mYiOBzwgN+/C8XFZNpTbwY/hc8HO4nAe/IGx4WBIVaojfYk=
-=OrBJ
+iQEcBAEBCAAGBQJSKzWqAAoJEJWyH81tNOV933gH/0waUpZvqeignDhB5jOI4UQv
+R+VU0l1de4K8QFnoSNV5c+S1OsjL5nN1RUw8tmup1OiNihmSB/7OU3bXwtOfN9SH
+Exm90y4uNOjqbTWgj+9TduvM7wlsnsnsz3yZCLjknntas1krLpOnrgWWcXFqOH/V
+kl4liJWKYIs5OqmQ3A4vVkfZTnM4T2/hX+AhR14DQs7EIz5ZZf2C0Y7tnnPaJN/k
+IJ91YM0/HHkgC+/RLMx0wfa+zjBXhEJK4W3zKj11HEKKz+baLgZQiHYicFkTLAbY
++ZpFD62zS0LrO9qQvf6tUQnfYfD0C2TuVerVkHUHxIPlYlC8Sm8++qKfBITA47c=
+=LYUr
 -----END PGP SIGNATURE-----
