@@ -9,4 +9,4 @@ RDEPEND=dev-lang/ruby:1.9[ssl] net-misc/rsync net-misc/curl
 SLOT=0
 SRC_URI=http://s3.amazonaws.com/ec2-downloads/ec2-ami-tools-1.4.0.5.zip
 _eclasses_=eutils	63afaaed8aa819fdcb814c7cd39495a2	multilib	892e597faee02a5b94eb02ab512e7622	toolchain-funcs	7ffd28a8c7eea27218865352bfd3ab2f	user	d0a4d0735a6c0183d707ca919bd72f28	versionator	6601b4c5b3f019a993db59a50e1854e4
-_md5_=a4f2a9f6d4ad4a76bd7320717427a51a
+_md5_=65ef72b0783dcb42ad02fb3c8298a8c2
