@@ -6,8 +6,8 @@ HOMEPAGE=http://unetbootin.sourceforge.net/
 IUSE=linguas_am linguas_ar linguas_ast linguas_be linguas_bg linguas_bn linguas_ca linguas_cs linguas_da linguas_de linguas_el linguas_eo linguas_es linguas_et linguas_eu linguas_fi linguas_fo linguas_fr linguas_gl linguas_he linguas_hr linguas_hu linguas_id linguas_it linguas_ja linguas_lt linguas_lv linguas_ml linguas_ms linguas_nan linguas_nb linguas_nl linguas_nn linguas_pl linguas_pt linguas_pt_BR linguas_ro linguas_ru linguas_sk linguas_sl linguas_sr linguas_sv linguas_sw linguas_tr linguas_uk linguas_ur linguas_vi linguas_zh_CN linguas_zh_TW
 KEYWORDS=amd64 x86
 LICENSE=GPL-2
-RDEPEND=dev-qt/qtgui:4 sys-fs/mtools sys-boot/syslinux app-arch/p7zip
+RDEPEND=dev-qt/qtgui:4 sys-fs/mtools <sys-boot/syslinux-5 app-arch/p7zip
 SLOT=0
 SRC_URI=mirror://sourceforge/unetbootin/unetbootin-source-583.tar.gz
 _eclasses_=base	ec46b36a6f6fd1d0b505a33e0b74e413	eutils	63afaaed8aa819fdcb814c7cd39495a2	multilib	892e597faee02a5b94eb02ab512e7622	qt4-r2	ce0c9abfee272185e03ab73f09f5fd69	toolchain-funcs	7ffd28a8c7eea27218865352bfd3ab2f	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=00d0329cb059d7352f219a6741130878
+_md5_=8b61f39115d455215e38c2bead84f824
