@@ -1,6 +1,10 @@
 # ChangeLog for sys-boot/unetbootin
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-boot/unetbootin/ChangeLog,v 1.99 2013/07/03 12:18:12 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-boot/unetbootin/ChangeLog,v 1.100 2013/09/07 14:28:28 jer Exp $
+
+  07 Sep 2013; Jeroen Roovers <jer@gentoo.org> unetbootin-583.ebuild,
+  unetbootin-584.ebuild, unetbootin-585.ebuild:
+  Depend on sys-boot/syslinux-4 (bug #474648).
 
 *unetbootin-585 (03 Jul 2013)
 
